cutlass_gemm_mainloop/build/bench_128_192_512_s0_d1.log
../../cutlass/include/cutlass/gemm/collective/sm100_mma_warpspecialized.hpp(188): error: static assertion failed with "Specialization requires Stages set to value 1 or more."
    static_assert(DispatchPolicy::Stages >= 2, "Specialization requires Stages set to value 1 or more.");
    ^
          detected during instantiation of class "cutlass::gemm::collective::CollectiveMma<cutlass::gemm::MainloopSm100TmaUmmaWarpSpecialized<Stages, SchedulerPipelineStageCount, AccumulatorPipelineStageCount, ClusterShape>, TileShape_, ElementA_, StrideA_, ElementB_, StrideB_, TiledMma_, GmemTiledCopyA_, SmemLayoutAtomA_, SmemCopyAtomA_, TransformA_, GmemTiledCopyB_, SmemLayoutAtomB_, SmemCopyAtomB_, TransformB_> [with Stages=1, SchedulerPipelineStageCount=2, AccumulatorPipelineStageCount=2, ClusterShape=ClusterShape, TileShape_=MmaTileShape, ElementA_=ElementAB, StrideA_=cute::tuple<int64_t, cute::C<1>, int64_t>, ElementB_=ElementAB, StrideB_=cute::tuple<int64_t, cute::C<1>, int64_t>, TiledMma_=cute::TiledMMA<cute::MMA_Atom<cute::MMA_Traits<cute::SM100_MMA_F8F6F4_SS, ElementAB, ElementAB, ElementAccumulator, cute::C<128>, cute::C<192>, cute::integral_constant<cute::UMMA::Major, cute::UMMA::Major::K>, cute::integral_constant<cute::UMMA::Major, cute::UMMA::Major::K>, cute::integral_constant<cute::UMMA::ScaleIn, cute::UMMA::ScaleIn::One>, cute::integral_constant<cute::UMMA::ScaleIn, cute::UMMA::ScaleIn::One>>>, cute::Layout<cute::tuple<cute::_1, cute::_1, cute::_1>, cute::tuple<cute::_0, cute::_0, cute::C<0>>>, cute::tuple<cute::Underscore, cute::Underscore, cute::Underscore>>, GmemTiledCopyA_=cute::SM90_TMA_LOAD, SmemLayoutAtomA_=cute::ComposedLayout<cute::Swizzle<3, 4, 3>, cute::smem_ptr_flag_bits<8>, cute::Layout<cute::tuple<cute::_8, cute::_128>, cute::tuple<cute::_128, cute::_1>>>, SmemCopyAtomA_=void, TransformA_=cute::identity, GmemTiledCopyB_=cute::SM90_TMA_LOAD, SmemLayoutAtomB_=cute::ComposedLayout<cute::Swizzle<3, 4, 3>, cute::smem_ptr_flag_bits<8>, cute::Layout<cute::tuple<cute::_8, cute::_128>, cute::tuple<cute::_128, cute::_1>>>, SmemCopyAtomB_=void, TransformB_=cute::identity]" at line 171 of /home/net/microbench-blackwell/cutlass_gemm_mainloop/cutlass_gemm_bench.cu

1 error detected in the compilation of "/home/net/microbench-blackwell/cutlass_gemm_mainloop/cutlass_gemm_bench.cu".
